asyncgit/src/gitui/tests/snapshots/gnostr_asyncgit__gitui__tests__stage__stage_added_line.snap
---
source: src/gitui/tests/stage.rs
expression: ctx.redact_buffer()
---
 On branch main                                                                 |
                                                                                |
 Unstaged changes (1)                                                           |
 modified   firstfile                                                           |
 @@ -1,3 +1,2 @@                                                                |
 -testing                                                                       |
▌-testtest                                                                      |
  weehooo                                                                       |
 +blrergh                                                                       |
                                                                                |
 Staged changes (1)                                                             |
 modified   firstfile                                                           |
 @@ -1,2 +1,3 @@                                                                |
  testing                                                                       |
  testtest                                                                      |
 +weehooo                                                                       |
                                                                                |
 Recent commits                                                                 |
────────────────────────────────────────────────────────────────────────────────|
$ git apply --cached --recount                                                  |
styles_hash: eca2ccd8f37da412
