asyncgit/src/gitui/tests/snapshots/gnostr_asyncgit__gitui__tests__stage__stage_changes_crlf.snap
---
source: src/gitui/tests/stage.rs
expression: ctx.redact_buffer()
---
 On branch main                                                                 |
                                                                                |
 Unstaged changes (1)                                                           |
▌modified   testfile                                                            |
▌@@ -1,2 +1,2 @@                                                                |
▌-testing                                                                       |
▌+test                                                                          |
▌ testtest                                                                      |
                                                                                |
 Recent commits                                                                 |
 c0bec93 main add testfile                                                      |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: 22fa0645c4b8234b
