asyncgit/src/gitui/tests/snapshots/gnostr_asyncgit__gitui__tests__stage__stage_removed_line.snap
---
source: src/gitui/tests/stage.rs
expression: ctx.redact_buffer()
---
 On branch main                                                                 |
                                                                                |
 Unstaged changes (1)                                                           |
 modified   firstfile                                                           |
 @@ -1 +1,2 @@                                                                  |
▌-testtest                                                                      |
 +weehooo                                                                       |
 +blrergh                                                                       |
                                                                                |
 Staged changes (1)                                                             |
 modified   firstfile                                                           |
 @@ -1,2 +1 @@                                                                  |
 -testing                                                                       |
  testtest                                                                      |
                                                                                |
 Recent commits                                                                 |
 95a979d main add firstfile                                                     |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
$ git apply --cached --recount                                                  |
styles_hash: 489e8cbbde4c3eb
