asyncgit/src/gitui/tests/snapshots/gnostr_asyncgit__gitui__tests__stage__staged_file.snap
---
source: src/gitui/tests/stage.rs
expression: ctx.redact_buffer()
---
▌No branch                                                                      |
                                                                                |
 Staged changes (1)                                                             |
 added      new-file…                                                           |
                                                                                |
 Recent commits                                                                 |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: 7ea74fe89bdd4fd8
